Refactor: preQuestion, ApplicationQuestion 응답값 분리